# Median

./: CMakeLists.txt  Readme.md
cmake/: CMakeIntegrateCPPUnit.cmake
include/: medianstructure.h
src/: main.cpp  medianstructure.cpp
unit-tests/: utest.cpp  utest.h
